# LexArchivo-macOS-

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: macos-release.yml
docs/: ACTUALIZACIONES.md  LEXARCHIVO_SYNC.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  domain.test.ts  updater.ts
