[package]
name = "lexarchivo"
version = "0.0.1"
description = "LexArchivo"
authors = ["LexArchivo"]
edition = "2021"

[lib]
name = "lexarchivo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
zip = "2"

[dev-dependencies]
tempfile = "3"
